--- a/index.html
+++ b/index.html
@@ -240,18 +240,19 @@
       <div class="container">
         <article class="container--addpagepage hidden" data-js="add-page">
           <div></div>
-            <div class="addpagepage--welcome">Add your own Questions!</div>
-            <!-- action as target where the form is send to -->
-            <!-- method POST for a anonymized form -->
-            <form action="/register" method="POST">
+            <div class="addpagepage--welcome">Add your own Questions!
+              <!-- action as target where the form is send to -->
+              <!-- method POST for a anonymized form -->
+              <form action="/register" method="POST">
+            </div>
               <!-- is the name for the input objekt -->
-              <div class="addpagepage--question">
-                <label>Frage:
+            <div class="addpagepage--question">
+              <label>Frage:
                   <!-- type like text or e-mail for specificstion -->
                   <!-- placegholder to show a example -->
                   <!-- required thats impossible to send the form without this input-->
-                  <input type="text" placeholder="Hast du schon eine gute Frage?" required/>
-                </label>
+                <input type="text" placeholder="Hast du schon eine gute Frage?" required/>
+              </label>
               </div>
               <div class="addpagepage--answer">
                 <label>
@@ -277,8 +278,8 @@
                   <input type="text" placeholder="z.B. Ordnerstruktur" required>
                 </label>
               </div>
-              <div class="addpagepage--sidebarleft"></div>
-              <div class="addpagepage--spacetopright"></div>
+              <div class="addpagepage--sidebarleft1"></div>
+              <div class="addpagepage--spacetopright1"></div>
             </form>
           </article>
         </article>
