layout profile page

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
               </div>
               <div class="addpagepage--sidebarleft1"></div>
               <div class="addpagepage--spacetopright1"></div>
+              <div class="addpagepage--spacetopright2"></div>
             </form>
           </article>
         </article>
@@ -288,14 +289,17 @@
       <div class="container">
         <article class="container--profilepage hidden" data-js="profile-page">
           <p class="profilepage--headline">Profile</p>
-          <img class="profilepage--picture" src="./pictures/profile_icon.png" width="150px" height="150px" alt="Profilbild">
+          <p class="profilepage--picture">
+            <img src="./pictures/profile_icon.png" width="150px" height="150px" alt="Profilbild">
+          </p>
           <p class="profilepage--name">John Doe</p>
           <p class="profilepage--aboutme">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est repellat delectus modi quibusdam doloremque, facere odio esse temporibus fugit sunt.</p>
           <button class="profilepage--questionscounter">Questionscounter</button>
           <button class="profilepage--bookmarkscounter">Bookmarkscounter</button>
           <p class="profilepage--headlinesettings">Settings</p>
-          <p class="profilepage--darkmodetext"></p>
+          <p class="profilepage--darkmodetext">Darkmode</p>
           <button class="profilepage--darkmodebutton">Darkmode</button>
+          <div class="profilepage--sidebarleft"></div>
           </article>
         </article>
       </div>
