create animation js

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <!-- headline  right fixed-->
         <h1 class="box--headline">QuizApp</h1>
         <!-- 4 nav pointer -->
-        <div class="box--button1">Quizcards</div>
-        <div class="box--button2">Bookmarks</div>
-        <div class="box--button3">Addpage</div>
-        <div class="box--button4"->Profile</div>
+        <div class="box--button1 blink_me" data-js="quizIndicator">Quizcards</div>
+        <div class="box--button2" data-js="bookmarkIndicator">Bookmarks</div>
+        <div class="box--button3" data-js="addIndicator">Addpage</div>
+        <div class="box--button4" data-js="profileIndicator">Profile</div>
         <!-- left border frame -->
         <div class="box--lefttopborder">02-34565</div>
         <div class="box--leftbottomborder">04-67842</div>
