add colorchange in nav bar

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           <div class="navbar-bottomleftcorner"></div>
           <div class="navbar--bottom1"></div>
           <div class="navbar--bottom2"></div>
-          <button class="navbar--mainpagebutton" data-js="nav-Quizcard">
+          <button class="navbar--mainpagebutton colored" data-js="nav-Quizcard">
             Mainpage
           </button>
           <button class="navbar--bookmarkpagebutton" data-js="nav-bookmark">
