--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
               <div class="addpagepage--hashtagtwo">
                 <label>
                   Hashtag 2
-                  <input type="text" placeholder="Natürlich!" required>
+                  <input type="text" placeholder=". B. Ordnerstruktur" required>
                 </label>
               </div>
               <div class="addpagepage--hashtagthree">
                 <label>
                   Hashtag 3
-                  <input type="text" placeholder="z.B. Ordnerstruktur" required>
+                  <input type="text" placeholder="z.B. Git" required>
                 </label>
               </div>
               <div class="addpagepage--sidebarleft1"></div>
