--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
               <img
                 src="./pictures/bookmark_icon.png"
                 alt="bookmark icon"
-                width="40px"
-                height="40px"
+                width="40"
+                height="40"
                 data-js="bookmarkicon"
                 class="quizcard--bookmarkicon1"
               />
