--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       <!-- Navbar -->
       <nav class="container">
         <article class="container--navbar">
-          <div class="navbar-bottomleftcorner"></div>
+          <div class="navbar-bottomleftcorner">06-54275</div>
           <div class="navbar--bottom1"></div>
           <div class="navbar--bottom2"></div>
           <button class="navbar--mainpagebutton colored" data-js="nav-Quizcard">
