--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </p>
             <!-- add hideable Answer -->
             <div class="quizcard--answerbox">
-              <p class="quizcard--answer1 hidden" data-js="quizcard--answer">mkdir</p>
+              <p class="quizcard--answer hidden" data-js="quizcard--answer">mkdir</p>
             </div>
             <!-- add Asnwerbutton -->
             <button class="quizcard--answerbutton" data-js="quizcard--answerbutton">Show Answer</button>
