repair form and function

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <main>
       <!-- Quizcardpage -->
-      <div class="container">
+      <div class="container" data-js="quiz11">
         <article class="container--quizcardpage" data-js="quizcard-page">
           <!-- Quizcard 1 -->
           <section class="quizcardpage--quizcard" data-js="quizcard">
@@ -51,8 +51,6 @@
                 <img
                   src="./pictures/bookmark_icon.png"
                   alt="bookmark icon"
-                  width="40"
-                  height="40"
                   data-js="bookmarkicon"
                   class="quizcard--bookmarkicon"
                 />
